# unicef-ecaro-evaluation

./: .gitignore  Generate Report.ipynb  Makefile  README.md  Readme.ipynb  env.yaml  environment.yml  pipeline.yaml  pyproject.toml  setup.cfg
embedded-assets/: tmps6a4ozy2.html
pipelines/: 01_cpd_priorities.ipynb  01_text_extraction.ipynb  02_summary_narrative_ouput_level.ipynb  03_coars_narratives.ipynb  04_coars_context_summarization.ipynb  05_identify_and_extract_innovations.ipynb  06_identify_and_extract_gender_activity.ipynb  07_coars_needs_extraction_classification.ipynb  08_cpd_priorities.ipynb  09_gender_disability_tags.ipynb  100_coar_sections.ipynb  101_coar_partnerships_and_collaborations.ipynb  10_insight_trips.ipynb  110_coar_narrative_innovation.ipynb  11_insight_trips.ipynb  11_sitans_recommendations_extraction_classification.ipynb  120_coar_summaries.ipynb  12_unsdcf_national_priorities_extraction_classification.ipynb  130_hr_regional_office.ipynb  13_psns_comparative_advantages_extraction.ipynb  14_sources_to_sdg_areas.ipynb  150_partnerships_from_insight.ipynb  15_rd_letters_strengths_improvement.ipynb  170_donor_funds_distribution.ipynb  180_sources_to_SDG_areas.ipynb  20_activities_programme_stucture.ipynb  21_resources_activities_programme_stucture.ipynb  30_funds_goal_result.ipynb  40_programme_structure.ipynb  50_parttners_to_type.ipynb  51_agencies_to_goal_areas.ipynb  60_insight_indicators.ipynb  61_indicator_mapping.ipynb  62_total_indicator_achievements.ipynb  70_gender_disability_tags.ipynb  90_partnership_transfers.ipynb  (+2 more)
(+50 files in other folders)
